Ignore configure results

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ lib/pkgconfig/*
 mkspecs/*
 Makefile.Debug
 Makefile.Release
+config.log
+config.tests/dconf/dconf
+config.tests/dconf-dbus-1/dconf-dbus-1
+examples/configuration/metaobject/metaobject
