Add all include directories

--- a/examples/configuration/metaobject/CMakeLists.txt
+++ b/examples/configuration/metaobject/CMakeLists.txt
@@ -1,3 +1,9 @@
+include_directories(
+    ${CMAKE_BINARY_DIR}/headers
+    ${CMAKE_SOURCE_DIR}/headers
+    ${CMAKE_SOURCE_DIR}/src/configuration
+)
+
 set(SOURCES
     main.cpp
     settings.cpp
