Update the ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,2 @@
-*~
-doc/html
-Makefile
-*.o
-*.a
-moc_*.cpp
-*.pro.user
-*.moc
-lib*.so
-lib*.so.*
-.qmake.cache
-include/*
-lib/cmake/*
-lib*.la
-lib*.prl
-module-paths/*
-lib/pkgconfig/*
-mkspecs/*
-Makefile.Debug
-Makefile.Release
-config.log
-config.tests/dconf/dconf
-examples/configuration/metaobject/metaobject
+build/
+*.user
