Say hello to QStaticConfiguration
This class offers a value/setValue interface much like QSettings.

--- a/src/configuration/CMakeLists.txt
+++ b/src/configuration/CMakeLists.txt
@@ -10,11 +10,13 @@ set(SOURCES
     qconfigurationutils.cpp
     qdconfconfigurationbackend.cpp
     qgvariantutils.cpp
+    qstaticconfiguration.cpp
 )
 
 set(HEADERS
     qconfigurationbackend.h
     qconfiguration.h
+    qstaticconfiguration.h
 )
 
 add_library(qtconfiguration SHARED ${SOURCES})
